[gd_scene load_steps=5 format=3 uid="uid://di8twtyc507sv"]

[ext_resource type="Script" uid="uid://b1vo430hvlfnn" path="res://scripts/menus/options_menu.gd" id="1_liyum"]
[ext_resource type="PackedScene" uid="uid://cgvf3lbv4bigi" path="res://scenes/menus/volume_slider.tscn" id="2_ijpji"]
[ext_resource type="AudioStream" uid="uid://57fqemeq825r" path="res://assets/audio/sfx/157539__nenadsimic__click.wav" id="2_lfjc7"]
[ext_resource type="AudioStream" uid="uid://by2jd1ly47ywq" path="res://assets/audio/sfx/268108__nenadsimic__button-tick.wav" id="3_3xsyx"]

[node name="options_menu" type="CanvasLayer"]
script = ExtResource("1_liyum")
sfx_hover = ExtResource("2_lfjc7")
sfx_click = ExtResource("3_3xsyx")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 110
alignment = 1

[node name="AudioButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio"

[node name="GraphicsButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Graphics"

[node name="GameplayButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Gameplay"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="AudioContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/h_separation = 70
columns = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Music"
horizontal_alignment = 2

[node name="MusicSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/AudioContainer" node_paths=PackedStringArray("audio_player") instance=ExtResource("2_ijpji")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bus_name = "Music"
audio_player = NodePath("../../../../../../AudioStreamPlayer")

[node name="SFXLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "SFX"
horizontal_alignment = 2

[node name="SFXSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/AudioContainer" node_paths=PackedStringArray("audio_player") instance=ExtResource("2_ijpji")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bus_name = "SFX"
audio_player = NodePath("../../../../../../AudioStreamPlayer")

[node name="SubtitlesLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Subtitles"
horizontal_alignment = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/AudioContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="GraphicsContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/h_separation = 70
columns = 2

[node name="BrightnessLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Brightness"
horizontal_alignment = 2

[node name="BrightnessSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Resolution" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Resolution"
horizontal_alignment = 2

[node name="ResolutionDropButton" type="OptionButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Fullscreen"
horizontal_alignment = 2

[node name="FullscreenCheckbox" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer"]
layout_mode = 2

[node name="GameplayContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 70
columns = 2

[node name="ForwardLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Forward"
horizontal_alignment = 2

[node name="ForwardButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="LeftLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Left"
horizontal_alignment = 2

[node name="LeftButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="BackwardLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Backward"
horizontal_alignment = 2

[node name="BackwardButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="RightLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Right"
horizontal_alignment = 2

[node name="RightButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="JumpLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Jump"
horizontal_alignment = 2

[node name="JumpButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="CrouchLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Crouch"
horizontal_alignment = 2

[node name="CrouchButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 70
columns = 2

[node name="GrappleLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Forward"
horizontal_alignment = 2

[node name="GrappleButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="PullRopeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Pull Rope"
horizontal_alignment = 2

[node name="PullButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="PushLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Push Rope"
horizontal_alignment = 2

[node name="PushLabel2" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="FireExtLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Fire Ext."
horizontal_alignment = 2

[node name="FireExtButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer3" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 70
columns = 2

[node name="ItemLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer2/GridContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Item 1"
horizontal_alignment = 2

[node name="ItemButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer2/GridContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="ItemLabel2" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer2/GridContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Item 2"
horizontal_alignment = 2

[node name="ItemButton2" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer2/GridContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="ItemLabel3" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer2/GridContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Item 3"
horizontal_alignment = 2

[node name="ItemButton3" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/GameplayContainer/HBoxContainer/VBoxContainer2/GridContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="ExitButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 24
text = "Done"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/AudioButton" to="." method="_on_audio_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/GraphicsButton" to="." method="_on_graphics_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/GraphicsButton" to="." method="_on_graphics_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/GameplayButton" to="." method="_on_gameplay_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/GameplayButton" to="." method="_on_gameplay_button_pressed"]
[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer/ResolutionDropButton" to="." method="_on_resolution_drop_button_item_selected"]
[connection signal="toggled" from="MarginContainer/Panel/MarginContainer/VBoxContainer/GraphicsContainer/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="mouse_entered" from="MarginContainer/Panel/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
